--- a/client/src/style/Records.css
+++ b/client/src/style/Records.css
@@ -1,4 +1,4 @@
-.Sideheader {
+/* .Sideheader {
   height: 5rem;
   margin: 1rem;
   display: flex;
@@ -10,18 +10,19 @@
 
 .wrapper {
   width: 100%;
+  height: 80%;
   margin: 0 auto;
   display: flex;
 }
 
 .Sideleft {
   width: 20rem;
-  display: flex;
   background-color: rgb(240, 240, 240);
   border-radius: 20px;
   margin: 1rem;
-  align-content: center;
   float: left;
+  padding: 1rem;
+  text-align: center;
 }
 
 .Sideright {
@@ -49,10 +50,12 @@
 }
 
 .card {
-  margin: 0.5rem;
+  width: 100%;
+  height: 100%;
   background-color: white;
   text-align: center;
   display: flex;
+  align-items: center;
   justify-content: center;
 }
 
@@ -60,4 +63,54 @@
   width: 100%;
   height: 100%;
   margin: 0 auto;
+} */
+
+/*/////////////////////////////////////////////////////////////*/
+
+.container {
+  width: 100vw;
+}
+.top {
+  height: 15vh;
+  box-sizing: border-box;
+  display: flex;
+  padding-top: 2rem;
+  padding-right: 2rem;
+  padding-left: 2rem;
+  padding-bottom: 1rem;
+}
+
+.left {
+  width: 30vw;
+  height: 85vh;
+  float: left;
+  box-sizing: border-box;
+  display: flex;
+  padding-top: 1rem;
+  padding-right: 1rem;
+  padding-left: 2rem;
+  padding-bottom: 2rem;
+}
+
+.right {
+  width: 70vw;
+  height: 85vh;
+  float: right;
+  padding-top: 1rem;
+  padding-right: 2rem;
+  padding-left: 1rem;
+  padding-bottom: 2rem;
+  box-sizing: border-box;
+  display: flex;
+}
+.claerfix {
+  clear: both;
+}
+
+.context {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(240, 240, 240);
+  border-radius: 20px;
+  text-align: center;
 }
