--- a/client/src/style/Records.css
+++ b/client/src/style/Records.css
@@ -113,4 +113,19 @@
   background-color: rgb(240, 240, 240);
   border-radius: 20px;
   text-align: center;
+  box-sizing: border-box;
+  padding: 1rem;
+}
+
+.innercontext {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  text-align: center;
+}
+
+.topinnercontext {
+  width: 100%;
+  height: 100%;
+  text-align: center;
 }
