--- a/client/src/style/Records.css
+++ b/client/src/style/Records.css
@@ -1,74 +1,6 @@
-/* .Sideheader {
-  height: 5rem;
-  margin: 1rem;
-  display: flex;
-  justify-content: center;
-  background-color: rgb(240, 240, 240);
-  border-radius: 20px;
-  align-items: center;
-}
-
-.wrapper {
-  width: 100%;
-  height: 80%;
-  margin: 0 auto;
-  display: flex;
-}
-
-.Sideleft {
-  width: 20rem;
-  background-color: rgb(240, 240, 240);
-  border-radius: 20px;
-  margin: 1rem;
-  float: left;
-  padding: 1rem;
-  text-align: center;
-}
-
-.Sideright {
-  justify-content: center;
-  background-color: rgb(230, 230, 230);
-  float: right;
-  margin: 1rem;
-  padding: 1rem;
-  flex-grow: 1;
-  display: flex;
-  border-radius: 20px;
-}
-
-.claerfix {
-  clear: both;
-}
-
-.Sidefooter {
-  height: 10%;
-  background-color: rgb(224, 85, 85);
-  margin-right: 1rem;
-  margin-left: 1rem;
-  margin-top: 1rem;
-  border-radius: 20px;
-}
-
-.card {
-  width: 100%;
-  height: 100%;
-  background-color: white;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.container {
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-} */
-
-/*/////////////////////////////////////////////////////////////*/
-
 .container {
   width: 100vw;
+  background-color: rgb(240, 240, 240);
 }
 .top {
   height: 15vh;
@@ -90,6 +22,7 @@
   padding-right: 1rem;
   padding-left: 2rem;
   padding-bottom: 2rem;
+  background-color: rgb(240, 240, 240);
 }
 
 .right {
@@ -102,6 +35,7 @@
   padding-bottom: 2rem;
   box-sizing: border-box;
   display: flex;
+  background-color: rgb(240, 240, 240);
 }
 .claerfix {
   clear: both;
@@ -110,7 +44,7 @@
 .context {
   width: 100%;
   height: 100%;
-  background-color: rgb(240, 240, 240);
+  background-color: rgb(255, 255, 255);
   border-radius: 20px;
   text-align: center;
   box-sizing: border-box;
@@ -128,4 +62,15 @@
   width: 100%;
   height: 100%;
   text-align: center;
+  margin-left: 0;
+}
+
+.topcontext {
+  width: 100%;
+  height: 100%;
+
+  border-radius: 20px;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 1rem;
 }
