--- a/client/src/style/LoginPage.css
+++ b/client/src/style/LoginPage.css
@@ -31,4 +31,38 @@
   width: 100%;
   height: 100%;
   color: white;
+  font-family: "Helvetica", sans-serif;
 }
+
+.text {
+  font-family: "Helvetica", sans-serif;
+  font-size: 2vh;
+  color: #a6ffff;
+}
+
+/* .spinnerwapper {
+  background-image: url("../assets/bgim2.png");
+  display: flex;
+  background-size: cover;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+.spinner {
+  width: 5vh;
+  height: 5vh;
+  border: 5px solid;
+  border-color: white transparent white transparent;
+  border-radius: 50%;
+  animation: spin 1.3s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+} */
