--- a/client/src/style/Records.css
+++ b/client/src/style/Records.css
@@ -1,3 +1,14 @@
+:root {
+  --size-tableboxWidth: 50%;
+  --size-tableboxHeight: 50%;
+  --overflow-tablebox: hidden;
+  --position-tablebox: relative;
+  --z-index-tablebox: 0;
+  --rotate-y: 0;
+  --rotate-back: -180deg;
+  --rightinner-overflow: auto;
+}
+
 .container {
   width: 100vw;
   height: 100vh;
@@ -30,13 +41,10 @@
   width: 70vw;
   height: 85vh;
   float: right;
-  padding-top: 1rem;
-  padding-right: 2rem;
-  padding-left: 1rem;
-  padding-bottom: 2rem;
   box-sizing: border-box;
   display: flex;
   background-color: rgb(240, 240, 240);
+  padding-right: 1rem;
 }
 .claerfix {
   clear: both;
@@ -67,6 +75,18 @@
   overflow: auto;
 }
 
+.rightinnercontext {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 2.5vh;
+  font-family: "Helvetica", sans-serif;
+  overflow: var(--rightinner-overflow);
+  display: flex;
+  box-sizing: border-box;
+  padding-bottom: 2rem;
+}
+
 .topinnercontext {
   width: 100%;
   height: 100%;
@@ -80,7 +100,6 @@
 .topcontext {
   width: 100%;
   height: 100%;
-
   border-radius: 20px;
   text-align: center;
   box-sizing: border-box;
@@ -142,15 +161,49 @@
 }
 
 .tablebox {
-  width: 20vw;
-  height: 20vh;
-  background-color: aqua;
+  position: var(--position-tablebox);
+  width: var(--size-tableboxWidth);
+  height: var(--size-tableboxHeight);
+  background-color: rgb(255, 255, 255);
   transition: 2s;
+  overflow-y: var(--overflow-tablebox);
+  overflow-x: hidden;
+  margin: 1rem;
+  border-radius: 20px;
+  z-index: var(--z-index-tablebox);
+  transform: rotateY(var(--rotate-y));
+  box-sizing: border-box;
 }
 
-.tablebox:hover {
-  width: 100%;
-  height: 100%;
-  background-color: aqua;
+.tableboxFront {
+  background-color: rgb(255, 255, 255);
+  transform: rotateY(var(--rotate-y));
   transition: 2s;
+  position: absolute;
+  backface-visibility: hidden;
+  padding: 1rem;
+  box-sizing: border-box;
+}
+
+.tableboxBack {
+  background-color: rgb(255, 255, 255);
+  transition: 2s;
+  border-radius: 10px;
+  transform: rotateY(var(--rotate-back));
+  position: absolute;
+  backface-visibility: hidden;
+  padding: 1rem;
+  box-sizing: border-box;
+}
+
+.tableboxtop {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: flex-end;
+}
+.tableboxinner {
+  width: 100%;
+  height: 90%;
+  overflow: hidden;
 }
