--- a/client/src/style/LoginPage.css
+++ b/client/src/style/LoginPage.css
@@ -1,5 +1,5 @@
 .background {
-  background-image: url("../assets/bgim2.png");
+  background-image: url("../assets/loginwp.jpg");
   display: flex;
   background-size: cover;
   width: 100vw;
@@ -14,10 +14,10 @@
   align-items: center;
   text-align: center;
   border-radius: 20px;
-  border: 2px solid rgba(255, 255, 255, 0.7);
+  border: 2px solid #84c1ff;
   display: flex;
   background: transparent;
-  color: white;
+  color: #46a3ff;
   backdrop-filter: blur(30px);
   padding-left: 3vw;
   padding-right: 3vw;
@@ -30,14 +30,14 @@
   text-align: center;
   width: 100%;
   height: 100%;
-  color: white;
+  color: #46a3ff;
   font-family: "Helvetica", sans-serif;
 }
 
 .text {
   font-family: "Helvetica", sans-serif;
   font-size: 2vh;
-  color: #a6ffff;
+  color: #46a3ff;
 }
 
 /* .spinnerwapper {
