--- a/client/src/style/RegisterPage.css
+++ b/client/src/style/RegisterPage.css
@@ -1,5 +1,5 @@
 .background {
-  background-image: url("../assets/bgim2.png");
+  background-image: url("../assets/loginwp.jpg");
   display: flex;
   background-size: cover;
   width: 100vw;
@@ -14,10 +14,10 @@
   align-items: center;
   text-align: center;
   border-radius: 20px;
-  border: 2px solid rgba(255, 255, 255, 0.7);
+  border: 2px solid #84c1ff;
   display: flex;
   background: transparent;
-  color: white;
+  color: #46a3ff;
   backdrop-filter: blur(30px);
   padding-left: calc(3vw - 24px);
   padding-right: calc(3vw - 24px);
@@ -30,7 +30,7 @@
   text-align: center;
   width: 100%;
   height: 100%;
-  color: white;
+  color: #46a3ff;
 }
 
 .inputcontext {
@@ -38,5 +38,5 @@
   height: 100%;
   padding-left: 0;
   padding-right: 0;
-  color: white;
+  color: #46a3ff;
 }
