--- a/client/src/style/UploadOCR.css
+++ b/client/src/style/UploadOCR.css
@@ -1,14 +1,3 @@
-:root {
-  --size-tableboxWidth: 50%;
-  --size-tableboxHeight: 50%;
-  --overflow-tablebox: hidden;
-  --position-tablebox: relative;
-  --z-index-tablebox: 0;
-  --rotate-y: 0;
-  --rotate-back: -180deg;
-  --rightinner-overflow: auto;
-}
-
 .container {
   width: 100vw;
   height: 100vh;
@@ -65,12 +54,6 @@
   font-size: 1.6rem;
 }
 
-.recog {
-  height: 30vh;
-  display: flex;
-  flex-direction: row;
-}
-
 .contextLeftBg {
   width: 30vw;
   display: flex;
@@ -81,7 +64,6 @@
 .uploadArea {
   width: 20vw;
   height: 30vh;
-  margin-left: 4rem;
   background: #eeeeee;
   border-radius: 1.2rem;
   display: flex;
@@ -98,20 +80,15 @@
 }
 
 .contextRightBg {
-  width: 40vw;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
 
-#headResult {
-  margin-left: 1.3rem;
-}
-
 #result {
-  width: 30vw;
-  height: 21.5vh;
-  margin-left: 1.5rem;
+  width: 25vw;
+  height: 20vh;
+  margin-left: 2rem;
   background-color: #eeeeee;
   border: 0;
   border-radius: 0.9rem;
@@ -121,7 +98,6 @@
 }
 
 .modify {
-  height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -131,9 +107,9 @@
   margin-left: 6rem;
 }
 #modifyCon {
-  width: 30vw;
-  height: 19vh;
-  margin-left: 6rem;
+  width: 25vw;
+  height: 20vh;
+  margin-left: 2rem;
   font-size: 1.3rem;
   background-color: #eeeeee;
   border: 0;
@@ -369,4 +345,12 @@
 }
 .addRNSButton:hover {
   background-color: #fb7645;
+}
+
+.middle {
+  display: flex;
+  flex: 1 40%;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
