--- a/client/src/pages/visitPage/Visit.css
+++ b/client/src/pages/visitPage/Visit.css
@@ -1,3 +1,12 @@
+/* :root {
+  --rightinner-overflow: hidden;
+  --position-tablebox: relative;
+  --size-tableboxWidth: 50%;
+  --size-tableboxHeight: 50%;
+  --overflow-tablebox: hidden;
+  --z-index-tablebox: 0;
+} */
+
 .container {
   width: 100vw;
   height: 100vh;
@@ -44,7 +53,7 @@
 }
 
 .footer {
-  width: 100vw;
+  width: 100%;
   height: 85vh;
 }
 
@@ -53,7 +62,7 @@
   height: 100%;
   float: left;
   box-sizing: border-box;
-  padding: 2rem 1rem 2rem 2rem;
+  padding: 2rem 2rem 2rem 4rem;
 }
 
 .context {
@@ -73,10 +82,14 @@
   align-items: center;
 }
 
-.basicdata {
-  margin-right: 10%;
+.basicinfo {
   text-align: right;
   display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 2rem;
+  letter-spacing: 0.5rem;
+  font-size: 1.5rem;
 }
 
 .rightblock {
@@ -98,10 +111,10 @@
 }
 
 .numbox {
-  width: 10%;
-  height: 50%;
-  background-color: #0080ff;
-  border-radius: 10px;
+  width: 6rem;
+  height: 2.6rem;
+  background-color: #4dbff9;
+  border-radius: 1rem;
   color: white;
   display: flex;
   text-align: center;
@@ -111,17 +124,17 @@
 }
 
 .button {
-  width: 8vw;
-  height: 6vh;
-  background-color: #0080ff;
-  border-radius: 10px;
+  width: 6rem;
+  height: 2.6rem;
+  background-color: #4dbff9;
+  border-radius: 1rem;
   color: white;
   display: flex;
   text-align: center;
   align-items: center;
   justify-content: center;
   font-size: 2.5vh;
-  border: #0080ff;
+  border: #4dbff9;
 }
 
 .tablebox {
@@ -129,7 +142,7 @@
   width: var(--size-tableboxWidth);
   height: var(--size-tableboxHeight);
   background-color: rgb(255, 255, 255);
-  transition: 2s;
+
   overflow-y: var(--overflow-tablebox);
   overflow-x: hidden;
   margin: 1rem;
@@ -142,7 +155,7 @@
 .tableboxFront {
   background-color: rgb(255, 255, 255);
   transform: rotateY(var(--rotate-y));
-  transition: 2s;
+
   position: absolute;
   backface-visibility: hidden;
   padding: 1rem;
@@ -223,4 +236,17 @@
 }
 .addRNSButton:hover {
   background-color: #d94600;
+}
+
+.textfield {
+  width: 8vw;
+  height: 3vh;
+  border-radius: 5px;
+  background-color: rgb(240, 240, 240);
+  border: 2px solid rgb(240, 240, 240);
+  font-size: 2vh;
+}
+
+.textfield:focus {
+  outline-color: #26cfff;
 }
