--- a/client/src/pages/registerPage/RegisterPage.css
+++ b/client/src/pages/registerPage/RegisterPage.css
@@ -1,45 +1,45 @@
 .background {
-    background-image: url("../../assets/Loginnew2.png");
-    display: flex;
-    background-size: cover;
-    width: 100vw;
-    height: 100vh;
-    background-repeat: no-repeat;
-    align-items: center;
-    justify-content: center;
+  background-image: url("../../assets/Loginnew2.png");
+  display: flex;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  background-repeat: no-repeat;
+  align-items: center;
+  justify-content: center;
+  background-position: left bottom;
 }
 
 .registerbox {
-    margin-right: -40vw;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border-radius: 20px;
-    border: 2px solid #84c1ff;
-    background-color: #66b3ff;
-    display: flex;
-    /* background: transparent; */
-    color: white;
-    backdrop-filter: blur(30px);
-    padding-left: calc(3vw - 24px);
-    padding-right: calc(3vw - 24px);
-    padding-top: 5vh;
-    padding-bottom: 5vh;
-    box-sizing: border-box;
-    box-shadow: -5px 5px 2px 1px rgba(0, 0, 0, 0.2);
+  width: 25vw;
+  height: 72vh;
+  max-width: 500px;
+  max-height: 700px;
+  min-width: 350px;
+  min-height: 500px;
+  margin-right: -40vw;
+  margin-right: -40vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 20px;
+  background-color: #338cc1;
+  flex-direction: column;
+  color: white;
+  box-sizing: border-box;
+  padding-left: calc(5rem - 24px);
+  padding-right: calc(5rem - 24px);
 }
 
-.registercontext {
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    color: white;
+.registertext {
+  font-size: 2em;
+  font-weight: bold;
+  margin: 1rem 0 0rem 0;
 }
 
-.inputcontext {
-    width: 100%;
-    height: 100%;
-    padding-left: 0;
-    padding-right: 0;
-    color: white;
+.registerboxbottom {
+  margin: 0;
+  text-decoration: none;
+  color: white;
 }
