--- a/client/src/pages/visitPage/Visit.css
+++ b/client/src/pages/visitPage/Visit.css
@@ -65,7 +65,7 @@
   padding: 2rem 2rem 2rem 4rem;
 }
 
-.context {
+.leftbolckcontext {
   width: 100%;
   height: 100%;
   background-color: rgb(255, 255, 255);
@@ -88,8 +88,8 @@
   flex-direction: column;
   align-items: flex-end;
   gap: 2rem;
-  letter-spacing: 0.5rem;
-  font-size: 1.5rem;
+  letter-spacing: 0.2rem;
+  font-size: 1.3rem;
 }
 
 .rightblock {
