--- a/client/src/pages/loginPage/LoginPage.css
+++ b/client/src/pages/loginPage/LoginPage.css
@@ -1,3 +1,9 @@
+@import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
+* {
+  font-family: "Noto Sans TC";
+  font-weight: 400;
+}
+
 .background {
   background-image: url("../../assets/Loginnew2.png");
   display: flex;
@@ -32,7 +38,6 @@
 }
 
 .text {
-  font-family: "Helvetica", sans-serif;
   font-size: 2vh;
   color: white;
 }
