--- a/client/src/pages/registerPage/RegisterPage.css
+++ b/client/src/pages/registerPage/RegisterPage.css
@@ -1,3 +1,9 @@
+@import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
+* {
+  font-family: "Noto Sans TC";
+  font-weight: 400;
+}
+
 .background {
   background-image: url("../../assets/Loginnew2.png");
   display: flex;
@@ -34,7 +40,6 @@
 
 .registertext {
   font-size: 2em;
-  font-weight: bold;
   margin: 1rem 0 0rem 0;
 }
 
