--- a/client/src/pages/inquiryPage/table/QOL.css
+++ b/client/src/pages/inquiryPage/table/QOL.css
@@ -1,6 +1,5 @@
 .inquiry-table-QOL,
-.inquiry-table-QOL-header,
-.inquiry-table-QOL-content {
+.inquiry-table-QOL-header {
   width: 100%;
   display: flex;
   align-items: center;
@@ -19,30 +18,44 @@
 }
 
 .inquiry-table-QOL-content {
+  width: 100%;
   height: 85%;
   box-sizing: border-box;
   padding: 0 3rem 0 3rem;
+  display: flex;
+  flex-direction: row;
+  grid-row: 3;
+}
+
+.inquiry-table-QOL-content-block {
+  width: 100%;
+  height: 100%;
 }
 
 .inquiry-table-QOL-content-sliderbox {
-  width: 100%;
   height: 3rem;
+  margin: 3rem;
 }
 
-.MuiSlider-root {
-  color: blue;
-  height: 8px;
-}
-.MuiSlider-thumb {
-  height: 24px;
-  width: 24px;
-  background-color: "#fff";
-  border: "2px solid currentColor";
+.inquiry-table-QOL-content-block-textfield {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  background-color: rgb(240, 240, 240);
+  border: 2px solid rgb(240, 240, 240);
+  font-size: 2vh;
 }
 
-.MuiSlider-thumb :focus,
-.MuiSlider-thumb:hover,
-.Mui-active,
-.Mui-focusVisible {
-  box-shadow: "inherit";
+.inquiry-table-QOL-content-block-textfield:focus {
+  outline-color: #26cfff;
+}
+
+.inquiry-table-QOL-content-block-buttom {
+  width: 5rem;
+  height: 3rem;
+  background-color: #26cfff;
+  border-radius: 10px;
+  color: white;
+  font-size: 1rem;
+  border: 0;
 }
