--- a/client/src/pages/inquiryPage/table/QOL.css
+++ b/client/src/pages/inquiryPage/table/QOL.css
@@ -34,7 +34,7 @@
 
 .inquiry-table-QOL-content-sliderbox {
   height: 3rem;
-  margin: 3rem;
+  margin: 2rem 4rem 2rem 4rem;
 }
 
 .inquiry-table-QOL-content-block-textfield {
@@ -58,4 +58,20 @@
   color: white;
   font-size: 1rem;
   border: 0;
+}
+
+.inquiry-table-QOL-closebutton {
+  color: #717171;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  box-sizing: border-box;
+  padding-right: 0.5rem;
+}
+
+.inquiry-table-QOL-closebutton-item {
+  color: #717171;
+  border: none;
+  background-color: white;
+  margin: 1rem 0 1rem 0;
 }
