--- a/client/src/pages/inquiryPage/components/left.css
+++ b/client/src/pages/inquiryPage/components/left.css
@@ -36,7 +36,7 @@
   padding: 2rem 2rem 0 0;
   font-size: 1.2rem;
   letter-spacing: 0.5rem;
-  margin: 0 2rem 2rem 0;
+  margin: 0 0 2rem 0;
 }
 
 .textfield {
