--- a/client/src/pages/inquiryPage/table/ADL.css
+++ b/client/src/pages/inquiryPage/table/ADL.css
@@ -67,15 +67,17 @@
 .inquiry-table-ADL-content-row-breathing {
   display: flex;
   flex-direction: column;
-  margin-left: 4.5rem;
+  margin-left: 3.8rem;
 }
 
 .inquiry-table-ADL-content-row-brushTeethOrCombHair {
   display: flex;
   flex-direction: column;
-  margin-left: 4rem;
+  margin-left: 3.8rem;
 }
-
+.inquiry-table-ADL-content-row-eyelid {
+  margin-left: 0.7rem;
+}
 .inquiry-table-ADL-content-row-ariseFromChair {
   display: flex;
   flex-direction: column;
