--- a/client/src/pages/inquiryPage/components/right.css
+++ b/client/src/pages/inquiryPage/components/right.css
@@ -29,12 +29,12 @@
   justify-content: flex-end;
   align-items: flex-end;
   padding-right: 1rem;
-  height: 3rem;
+  height: 4rem;
 }
 
 .inquiry-right-to-table-button {
   width: fit-content;
-  height: 2rem;
+  height: 2.3rem;
   margin-right: 1rem;
   font-size: 1rem;
   border-radius: 0.6rem;
@@ -42,8 +42,8 @@
   padding-inline: 1rem;
   cursor: pointer;
   background-color: white;
-  outline: 0.15rem solid #67c6e3;
-  color: #67c6e3;
+  outline: 0.15rem solid #61677a;
+  color: #61677a;
 }
 
 .inquiry-right-to-table-button:hover {
@@ -52,14 +52,14 @@
 
 .inquiry-right-to-chart-button {
   width: fit-content;
-  height: 2rem;
+  height: 2.4rem;
   font-size: 0.95rem;
   cursor: pointer;
   border-radius: 0.6rem;
   border: 0;
   padding-inline: 1rem;
   background-color: white;
-  color: #67c6e3;
+  color: #61677a;
 }
 
 .inquiry-right-to-chart-button:hover {
