--- a/client/src/pages/inquiryPage/table/BloodTest.css
+++ b/client/src/pages/inquiryPage/table/BloodTest.css
@@ -19,7 +19,7 @@
   background-color: white;
   font-size: 3.7rem;
   color: #c7c8cc;
-  margin-left: -23rem;
+  margin-left: -17rem;
 }
 .BloodTest-backToRight:hover {
   cursor: pointer;
@@ -34,7 +34,7 @@
 }
 
 .inquiry-table-BloodTest-head p {
-  margin-left: 18rem;
+  margin-left: 12rem;
 }
 .inquiry-table-BloodTest-content {
   height: 65vh;
@@ -67,6 +67,13 @@
   right: 5rem;
   color: rgb(81, 80, 80);
   font-size: 1.2rem;
+}
+
+.MuiAlert-message {
+  font-size: 0.98rem;
+}
+.MuiAlert-root {
+  margin-top: 0.5rem;
 }
 
 .inquiry-table-BloodTest-content-row-testdate,
