--- a/client/src/pages/inquiryPage/components/left.css
+++ b/client/src/pages/inquiryPage/components/left.css
@@ -1,6 +1,14 @@
-.inquiry-components-left {
+.inquiry-components-left-bg {
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.inquiry-components-left {
+  width: 95%;
+  height: 95%;
   background-color: rgb(255, 255, 255);
   border: 1rem solid white;
   border-radius: 20px;
