--- a/client/src/pages/inquiryPage/table/Visit.css
+++ b/client/src/pages/inquiryPage/table/Visit.css
@@ -1,70 +1,142 @@
+input[type="range"]::-webkit-slider-thumb {
+  border: 12px solid black;
+}
 .inquiry-table-Visit-all {
-  width: 70vw;
+  width: 68vw;
   height: 85vh;
-  float: right;
   display: flex;
-  background-color: rgb(255, 255, 255);
-  overflow-y: auto;
 }
-.inquiry-table-Visit-head {
-  height: 10vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.6rem;
-}
-
-.inquiry-table-Visit-head-content {
+.inquiry-table-Visit-bg {
   width: 100%;
   height: 95%;
   margin-top: 1rem;
   margin-left: 1rem;
+  background-color: rgb(255, 255, 255);
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
 }
-.inquiry-table-Visit- {
-  text-align: center;
-}
 
-.inquiry-table-Visit-row {
-  width: 100%;
+.Visit-backToRight {
+  border: 0;
+  background-color: white;
+  font-size: 3.7rem;
+  color: #c7c8cc;
+  margin-left: -5rem;
+}
+.Visit-backToRight:hover {
+  cursor: pointer;
+  color: #b4b4b8;
+}
+.inquiry-table-Visit-head {
   height: 20vh;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  padding-bottom: 50px;
-  flex-wrap: wrap;
+  font-size: 2rem;
 }
 
-.inquiry-table-Visit-left-row,
-.inquiry-table-Visit-right-row {
-  width: 45%;
-  height: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+.inquiry-table-Visit-head p {
+  margin-left: 8rem;
 }
 
-.inquiry-table-Visit-left-slider,
-.inquiry-table-Visit-right-slider {
-  width: 70% !important;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.inquiry-table-Visit-note {
-  width: 100%;
+.inquiry-table-Visit-content {
+  height: 45vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-y: auto;
+}
+.inquiry-table-Visit-content-row {
+  width: 58vw;
+  height: 20vh;
+  font-size: 1.6rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-bottom: 3rem;
+}
+.inquiry-table-Visit-content-row input {
+  background-color: #eeeeee;
+  border: 0;
+  border-radius: 0.7rem;
+  padding: 0.3rem;
+  width: 14vw;
+  height: 10vh;
+  margin-top: 0.2rem;
 }
 
-.inquiry-table-Visit-textArea {
-  width: 50%;
-  height: 30vh;
+.inquiry-table-Visit-content-row-SBP,
+.inquiry-table-Visit-content-row-DBP {
+  display: flex;
+  flex-direction: column;
+  width: 20vw;
+  height: 16vh;
+}
+.inquiry-table-Visit-content-row-SBP-head,
+.inquiry-table-Visit-content-row-DBP-head {
+  display: flex;
+  align-items: center;
+}
+
+.inquiry-table-Visit-content-row-left,
+.inquiry-table-Visit-content-row-right {
+  display: flex;
+  flex-direction: column;
+}
+.inquiry-table-Visit-content-row-single {
+  display: flex;
+  flex-direction: column;
+  align-items: left !important;
+
+}
+
+.inquiry-table-Visit-content-row-ptosis {
+  margin-right: 0.5rem;
+}
+.inquiry-table-Visit-content-row-hipFlexion {
+  margin-right: 21rem;
+}
+
+
+.inquiry-table-Visit-content-row input[type="range"] {
+  width: 16vw;
+  margin: 0;
+}
+
+.inquiry-table-Visit-content-row-sum input {
+  border-radius: 0.7rem;
+  background-color: white;
+  border: 0;
+  height: 5vh;
+  font-size: 2rem;
+  width: 5vw;
+  margin-left: 1rem;
+}
+.inquiry-table-Visit-content-row-sum input:focus {
+  outline: 0;
+}
+
+.inquiry-table-Visit-content-row-testdate input {
+  background-color: #eeeeee;
+  border: 0;
+  border-radius: 0.7rem;
+  padding: 0.3rem;
+  width: 12vw;
+  height: 4vh;
+  margin-top: 0.2rem;
+}
+.inquiry-table-Visit-content-row-testdate input:focus {
+  outline: 0.15rem solid #7c7b7b;
+}
+
+.inquiry-table-Visit-content-row input {
+  width: 10rem;
+  height: 2rem;
+}
+.inquiry-table-Visit-content-row-input-note {
+  width: 20rem !important;
+  height: 10rem !important;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px;
@@ -74,10 +146,49 @@
   flex-direction: column;
 }
 
-.inquiry-table-Visit-content-submit {
+.inquiry-table-Visit-content-row input:hover {
+  cursor: pointer;
+}
+
+.inquiry-table-Visit-content-row input[type="date"] {
+  width: 16vw;
+  height: 5vh;
+  font-size: 1.3rem;
+}
+datalist {
   display: flex;
-  flex-direction: row;
-  height: 12vh;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
+  writing-mode: vertical-lr;
+  text-orientation: upright;
+  width: 16vw;
+  font-size: 1.3rem;
+}
+
+option {
+  padding: 0;
+}
+
+.inquiry-table-Visit-submit {
+  height: 15vh;
+  display: flex;
+  justify-content: flex-end;
   align-items: center;
+  margin-right: 4rem;
+}
+.inquiry-table-Visit-submit button {
+  width: 10vw;
+  height: 5vh;
+  background-color: #cae7f8;
+  color: #0c537b;
+  font-size: 1.3rem;
+  font-weight: bold;
+  border-radius: 1.2rem;
+  border: 0;
+}
+.inquiry-table-Visit-submit button:hover {
+  background-color: white;
+  color: #0c537b;
+  border: 0.15rem solid #0c537b;
+  cursor: pointer;
 }
